supp < / lien partenaires

--- a/partenaires.html
+++ b/partenaires.html
@@ -33,7 +33,7 @@
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
-></li>
+</li>
           <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
           <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
           <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
@@ -221,7 +221,9 @@
     <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
       <div class="card-image-garage">
+      <a href="https://www.citroen.fr/accueil.html" target="_blank">
       <img src="images/logo-citroen.png" height="100px">
+      </a>
       </div>
       </div>
       <style>
@@ -237,7 +239,9 @@
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+<a href="http://www.honda-rennes.com/" target="_blank">
 <img src="images/Logo-honda.jpg" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -253,7 +257,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.etoile35-rennes.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEvVFP-UbfTElRjmDwg0pjid2J30ZZDGFtyqPe2WHDosROiYDas3hxoCzw0QAvD_BwE" target="_blank">
 <img src="images/Logo-Mercedes.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -269,7 +275,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+<a href="https://www.espace-nissan.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaFW_ZXkUiF-xUlK-AMw-b46ooTni04UU1J-kZN7NvuoOedLq_eCJshoCBY4QAvD_BwE" target="_blank">
 <img src="images/logo-Nissan.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -285,7 +293,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="http://www.groupelanglois.fr/" target="_blank">
 <img src="images/logo-Opel.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -301,7 +311,9 @@ padding: 10px;
     <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.landrover-rennes.com/" target="_blank">
 <img src="images/logo_ Landrover.jpg" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -317,7 +329,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.mitsubishi-motors.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEUqXV8modTTSgIqBv9vV81SM4xI1EJiJ9u73zdJl2gEFa71l3UauBoCJRsQAvD_BwE" target="_blank">
 <img src="images/logo_ Mitsubishi.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -333,7 +347,10 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.renault.fr/concessionnaire.rennes.html?ORIGIN=F6liens-commerciaux&CAMPAIGN=00000702_dws-def-exact-Rennes&utm_campaign=00000702_dws-def-exact-Rennes&utm_medium=cpc&utm_source=google&utm_content=Renault+-+RENAULT+RETAIL+GROUP+RENNES&utm_term=renault%20rennes&gclsrc=aw.ds&&gclid=CjwKCAjwqfDlBRBDEiwAigXUaHsSvSHHevVasdvQxjdr4LI2MWOMA8YVXn1__CVdOxdsj7lOsizFABoCYRQQAvD_BwE
+" target="_blank">
 <img src="images/logo_ Renault.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -349,7 +366,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="http://www.huchet-sa.fr/" target="_blank">
 <img src="images/logo_bmw.jpeg" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -365,7 +384,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.lexus.fr/?&WT.tsrc=Paid+Search&WT.mc_id=OEM-FR-FR-B-BMM&WT.adsite=google&WT.srch=1&gclid=CjwKCAjwqfDlBRBDEiwAigXUaNZecHJrPpAHRCPxr7R0-3JXY3y9yfEr2FINTtdWVFOcPK4OXgb2ZRoCLogQAvD_BwE&gclsrc=aw.ds" target="_blank">
 <img src="images/logo_lexus.png">
+</a>
 </div>
 </div>
 <style>
@@ -381,7 +402,9 @@ padding: 10px;
         <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="http://www.ministore-huchet-sa.fr/" target="_blank">
 <img src="images/Logo_mini.jpg" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -397,7 +420,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="http://www.groupelanglois.fr/" target="_blank">
 <img src="images/Logo_opel.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -413,7 +438,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://concessions.peugeot.fr/sourget" target="_blank">
 <img src="images/Logo_peugeot.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -429,7 +456,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
      <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://rennes.centreporsche.fr/accueil?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEeQ8TSxD8dpxrmkogM9FKEeHtDKVc27IEOWhZFGm-aOWpFtoMPJPRoCipIQAvD_BwE" target="_blank">
 <img src="images/Logo_porsche.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -445,7 +474,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://www.vw-rennes.fr/" target="_blank">
 <img src="images/LogoVolkswagen.jpeg" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -461,7 +492,9 @@ padding: 10px;
             <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
      <div class="card-garage">
 <div class="card-image-garage">
+  <a href="http://www.legrand-bretagne-auto.fr/" target="_blank">
 <img src="images/Mazda-logo.png" height="100px">
+</a>
 </div>
 </div>
 <style>
@@ -477,7 +510,9 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
+  <a href="https://reseau.citroen.fr/rennes" target="_blank">
 <img src="images/logo-citroen.png" height="100px">
+</a>
 </div>
 </div>
 <style>
