--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,7 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
-</li>
+          <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a></li>
           <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
           <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
           <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
@@ -48,8 +47,7 @@
     <div class="dropdown">
       <i class="fas fa-bars dropdown-toggle" data-toggle="dropdown" role="button"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-         <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
-></li>
+         <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a></li>
           <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
           <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
           <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
