--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a></li>
-          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</a></li>
           <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
           <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
         </ul>
@@ -48,7 +48,7 @@
       <i class="fas fa-bars dropdown-toggle" data-toggle="dropdown" role="button"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
          <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a></li>
-          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</a></li>
           <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
           <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
       </ul>
