--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="texte-fond-blanc-banner">
           <h4 style="color: rgb(0, 0, 123)">VENEZ DÉCOUVRIR</h4>
           <h3 style="color: rgb(0, 0, 123)"><strong>L'AUTOSHOW AU GOLF DE CAP MALO</strong></h3><br>
-          <p style="color: black; opacity: 0.5;">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golfe</p>
+          <p style="color: black; opacity: 0.5;">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golf</p>
         </div>
         </div>
         <div class="en-savoir-plus-button">
@@ -344,7 +344,11 @@
   <div class="texte-presentation">
     <h1>PRÉSENTATION DU SALON DE L'AUTO</h1>
     <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur sequi nostrum accusamus repudiandae natus fugit, dolorem architecto voluptate dolores, voluptatum culpa optio quia eveniet animi tempora sed ex, praesentium adipisci!</p>
+    <p>C’est dans le but de réunir le monde de l’automobile et celui du golf que l’idée de cet AutoShow est née. La 1ère édition de cet évènement unique
+en France se tiendra donc le 24 et 25 Mai 2019.
+Au total 29 marques automobiles et plus d’une centaine de véhicules seront exposés au Gold de Cap Malo, à Melesse.
+Venez découvrir ce nouveau salon automobile dans un cadre exceptionnel et hors du commun ! De nombreuses animations vous seront proposées pour découvrir le golf (initiations gratuites, démonstrations…).
+Restauration sur place et entrée gratuite, ouverte à tous.</p>
   </div>
 </div>
 
@@ -430,7 +434,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-Mercedes.png" height="100px">
+          <img src="images/Logo-Mercedes.png" height="100px">
         </div>
 
       </div>
@@ -515,7 +519,7 @@
 
 <style>
   .partenaires {
-    margin: 150px 100px 150px 100px;
+    margin: 94px 100px 150px 100px;
   }
 
   .lien-partenaires {
@@ -612,7 +616,7 @@
         <li><div class="number">6 </div>Mercedes Benz</li>
         <li><div class="number">7 </div>Opel</li>
         <li><div class="number">8 </div>Peugeot</li>
-        <li><div class="number">9</div>Volkswagon</li>
+        <li><div class="number">9</div>Volkswagen</li>
       </ul>
       </div>
     </div>
