--- a/partenaires.html
+++ b/partenaires.html
@@ -149,7 +149,7 @@
 <div class="intro-partenaires text-center ">
 <div class="texte-intro-partenaires">
 <h3>NOS PARTENAIRES</h3>
-<p>Retrouvez 29 grandes marques de l’Automobiles !</p>
+<p>Retrouvez 29 grandes marques de l’Automobile !</p>
 </div>
 </div>
 </div>
