--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ Restauration sur place et entrée gratuite, ouverte à tous.</p>
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-Nissan.png" height="100px">
+          <img src="images/nissan.jpg" height="100px">
         </div>
 
       </div>
@@ -434,7 +434,7 @@ Restauration sur place et entrée gratuite, ouverte à tous.</p>
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/Logo-Mercedes.png" height="100px">
+          <img src="images/mercedes.jpg" height="100px">
         </div>
 
       </div>
@@ -460,7 +460,7 @@ Restauration sur place et entrée gratuite, ouverte à tous.</p>
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/Logo-honda.jpg" height="100px">
+          <img src="images/mazerati.jpg" height="100px">
         </div>
 
       </div>
@@ -486,7 +486,7 @@ Restauration sur place et entrée gratuite, ouverte à tous.</p>
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-Opel.png" height="100px">
+          <img src="images/opel.jpg" height="100px">
         </div>
 
       </div>
@@ -509,7 +509,7 @@ Restauration sur place et entrée gratuite, ouverte à tous.</p>
     <div class="col-sm-offset-1 col-sm-2">
       <br>
       <div class="boutton-partenaires text-center">
-        <a href="#">NOS PARTENAIRES</a>
+        <a href="partenaires.html">NOS PARTENAIRES</a>
       </div>
     </div>
   </div>
