--- a/partenaires.html
+++ b/partenaires.html
@@ -220,7 +220,7 @@
       <div class="card-garage">
       <div class="card-image-garage">
       <a href="https://www.citroen.fr/accueil.html" target="_blank">
-      <img src="images/logo-citroen.png" height="100px">
+      <img src="images/citroen.jpg" height="100px">
       </a>
       </div>
       </div>
@@ -238,7 +238,7 @@
       <div class="card-garage">
 <div class="card-image-garage">
 <a href="http://www.honda-rennes.com/" target="_blank">
-<img src="images/Logo-honda.jpg" height="100px">
+<img src="images/honda.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -256,7 +256,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://www.etoile35-rennes.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEvVFP-UbfTElRjmDwg0pjid2J30ZZDGFtyqPe2WHDosROiYDas3hxoCzw0QAvD_BwE" target="_blank">
-<img src="images/Logo-Mercedes.png" height="100px">
+<img src="images/mercedes.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -274,7 +274,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
 <a href="https://www.espace-nissan.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaFW_ZXkUiF-xUlK-AMw-b46ooTni04UU1J-kZN7NvuoOedLq_eCJshoCBY4QAvD_BwE" target="_blank">
-<img src="images/logo-Nissan.png" height="100px">
+<img src="images/nissan.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -292,7 +292,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="http://www.groupelanglois.fr/" target="_blank">
-<img src="images/logo-Opel.png" height="100px">
+<img src="images/opel.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -310,7 +310,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://www.landrover-rennes.com/" target="_blank">
-<img src="images/logo_ Landrover.jpg" height="100px">
+<img src="images/jaguar-landrover.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -328,7 +328,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://www.mitsubishi-motors.fr/?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEUqXV8modTTSgIqBv9vV81SM4xI1EJiJ9u73zdJl2gEFa71l3UauBoCJRsQAvD_BwE" target="_blank">
-<img src="images/logo_ Mitsubishi.png" height="100px">
+<img src="images/mitsubishi.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -365,7 +365,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="http://www.huchet-sa.fr/" target="_blank">
-<img src="images/logo_bmw.jpeg" height="100px">
+<img src="images/bmw.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -383,7 +383,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://www.lexus.fr/?&WT.tsrc=Paid+Search&WT.mc_id=OEM-FR-FR-B-BMM&WT.adsite=google&WT.srch=1&gclid=CjwKCAjwqfDlBRBDEiwAigXUaNZecHJrPpAHRCPxr7R0-3JXY3y9yfEr2FINTtdWVFOcPK4OXgb2ZRoCLogQAvD_BwE&gclsrc=aw.ds" target="_blank">
-<img src="images/logo_lexus.png">
+<img src="images/lexus.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -401,7 +401,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="http://www.ministore-huchet-sa.fr/" target="_blank">
-<img src="images/Logo_mini.jpg" height="100px">
+<img src="images/mini.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -419,7 +419,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="http://www.groupelanglois.fr/" target="_blank">
-<img src="images/Logo_opel.png" height="100px">
+<img src="images/opel.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -437,7 +437,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://concessions.peugeot.fr/sourget" target="_blank">
-<img src="images/Logo_peugeot.png" height="100px">
+<img src="images/peugeot.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -455,7 +455,7 @@ padding: 10px;
      <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://rennes.centreporsche.fr/accueil?gclid=CjwKCAjwqfDlBRBDEiwAigXUaEeQ8TSxD8dpxrmkogM9FKEeHtDKVc27IEOWhZFGm-aOWpFtoMPJPRoCipIQAvD_BwE" target="_blank">
-<img src="images/Logo_porsche.png" height="100px">
+<img src="images/porsh.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -473,7 +473,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://www.vw-rennes.fr/" target="_blank">
-<img src="images/LogoVolkswagen.jpeg" height="100px">
+<img src="images/wolfwagen.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -509,7 +509,7 @@ padding: 10px;
       <div class="card-garage">
 <div class="card-image-garage">
   <a href="https://reseau.citroen.fr/rennes" target="_blank">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/mazerati.jpg" height="100px">
 </a>
 </div>
 </div>
@@ -523,7 +523,68 @@ padding: 10px;
 }
 </style>
     </div>
+        <div class="col-sm-2 col-xs-12 margin-t-b">
+      <div class="card-garage">
+<div class="card-image-garage">
+  <a href="https://reseau.citroen.fr/rennes" target="_blank">
+<img src="images/alpine.jpg" height="100px">
+</a>
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+    </div>
+        <div class="col-sm-2 col-xs-12 margin-t-b">
+      <div class="card-garage">
+<div class="card-image-garage">
+  <a href="https://reseau.citroen.fr/rennes" target="_blank">
+<img src="images/suzuki.jpg" height="100px">
+</a>
+</div>
+
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+    </div>
+        <div class="col-sm-2 col-xs-12 margin-t-b">
+      <div class="card-garage">
+<div class="card-image-garage">
+  <a href="https://reseau.citroen.fr/rennes" target="_blank">
+<img src="images/manoir.jpg" height="100px">
+</a>
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+    </div>
+
   </div>
+  </div>
+  </div>
+
+  </div>
+
 <style>
   .margin-t-b {
     margin-bottom: 20px;
