--- a/contact.html
+++ b/contact.html
@@ -321,145 +321,99 @@
 
 
 <br><br>
-<div class="row">
- <div class="pages-partenaires text-center">
-  <div class="row text-center">
-    <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
-
-
-
-
-      <div class="card-garage">
-        <div class="card-image-garage">
-         <img src="images/logo_ Renault.png" height="100px">
-        </div>
-
-      </div>
-
-
-
-<style>
-  .card-garage {
-        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-  }
-
-  .card-image-garage {
-    padding: 10px;
-  }
-</style>
-
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-
-
-
-
-      <div class="card-garage">
-        <div class="card-image-garage">
-          <img src="images/logo-Nissan.png" height="100px">
-        </div>
-
-      </div>
-
-
-
-<style>
-  .card-garage {
-        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-  }
-
-  .card-image-garage {
-    padding: 10px;
-  }
-</style>
-
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-
-
-
-
-      <div class="card-garage">
-        <div class="card-image-garage">
-          <img src="images/logo-Mercedes.png" height="100px">
-        </div>
-
-      </div>
-
-
-
-<style>
-  .card-garage {
-        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-  }
-
-  .card-image-garage {
-    padding: 10px;
-  }
-</style>
-
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-
-
-
-
-      <div class="card-garage">
-        <div class="card-image-garage">
-          <img src="images/Logo-honda.jpg" height="100px">
-        </div>
-
-      </div>
-
-
-
-<style>
-  .card-garage {
-        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-  }
-
-  .card-image-garage {
-    padding: 10px;
-  }
-</style>
-
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-
-
-
-
-      <div class="card-garage">
-        <div class="card-image-garage">
-          <img src="images/logo-Opel.png" height="100px">
-        </div>
-
-      </div>
-
-
-
-<style>
-  .card-garage {
-        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-  }
-
-  .card-image-garage {
-    padding: 10px;
-  }
-</style>
-
-    </div>
-
-  </div>
-
+<div class="partenaires text-center">
+<div class="row text-center">
+<div class="col-sm-offset-1 col-sm-2 col-xs-12">
+<div class="card-garage text-center">
+<div class="card-image-garage text-center">
+<img src="images/logo_ Renault.png" height="100px">
 </div>
 </div>
 
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+</div>
+<div class="col-sm-2 col-xs-12">
+<div class="card-garage">
+<div class="card-image-garage">
+<img src="images/nissan.jpg" height="100px">
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+
+}
+@media (max-width: 500px) {
+.card-image-garage {
+margin-bottom: 20px;
+}
+}
+</style>
+</div>
+<div class="col-sm-2 col-xs-12">
+<div class="card-garage">
+<div class="card-image-garage">
+<img src="images/mercedes.jpg" height="100px">
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+</div>
+<div class="col-sm-2 col-xs-12">
+<div class="card-garage">
+<div class="card-image-garage">
+<img src="images/mazerati.jpg" height="100px">
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+</div>
+<div class="col-sm-2 col-xs-12">
+<div class="card-garage">
+<div class="card-image-garage">
+<img src="images/opel.jpg" height="100px">
+</div>
+</div>
+<style>
+.card-garage {
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+.card-image-garage {
+padding: 10px;
+}
+</style>
+</div>
+
+</div>
+</div>
+<br><br>
 <style>
   .margin-t-b {
     margin-bottom: 20px;
