--- a/index.html
+++ b/index.html
@@ -555,17 +555,27 @@ padding: 10px;
       <h2>RETROUVEZ LES MARQUES SUR LEURS STANDS</h2>
       <br>
       <div class="liste-marques">
-      <ul>
-        <li><div class="number">1 </div>Honda</li>
-        <li><div class="number">2 </div>Alpine</li>
-        <li><div class="number">3 </div>Audi</li>
-        <li><div class="number">4 </div>Citroen</li>
-        <li><div class="number">5 </div>Maserati</li>
-        <li><div class="number">6 </div>Mercedes Benz</li>
-        <li><div class="number">7 </div>Opel</li>
-        <li><div class="number">8 </div>Peugeot</li>
-        <li><div class="number">9</div>Volkswagen</li>
-      </ul>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
       </div>
     </div>
     <div class="boutton-partenaires-2 ">
