--- a/programme.html
+++ b/programme.html
@@ -377,7 +377,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 <div class="col-sm-offset-1 col-sm-2 col-xs-12">
 <div class="card-garage text-center">
 <div class="card-image-garage text-center">
-<img src="images/logo_ Renault.png" height="100px">
+<img src="images/porsh.jpg" height="100px">
 </div>
 </div>
 
