--- a/contact.html
+++ b/contact.html
@@ -326,7 +326,7 @@
 <div class="col-sm-offset-1 col-sm-2 col-xs-12">
 <div class="card-garage text-center">
 <div class="card-image-garage text-center">
-<img src="images/logo_ Renault.png" height="100px">
+<img src="images/porsh.jpg" height="100px">
 </div>
 </div>
 
