--- a/carrouselle.html
+++ b/carrouselle.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.6/assets/owl.theme.default.min.css" />
   </head>
   <body>
-    <h5>Avec image</h5>
     <div class="owl-carousel">
-      <img src="https://images.pexels.com/photos/97077/pexels-photo-97077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Mon image 1" />
-      <img src="https://images.pexels.com/photos/239898/pexels-photo-239898.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Mon image 2" />
-      <img src="https://images.pexels.com/photos/177598/pexels-photo-177598.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Mon image 3" />
-      <img src="https://images.pexels.com/photos/330771/pexels-photo-330771.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Mon image 4" />
-      <img src="https://images.pexels.com/photos/325111/pexels-photo-325111.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Mon image 5" />
+      <img src="images/carroussel.png" alt="Mon image 1" />
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 2" />
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 3" />
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 4" />
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 5" />
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
@@ -41,3 +40,8 @@
         <li><div class="number">8 </div>Peugeot</li>
         <li><div class="number">9</div>Volkswagen</li>
       </ul>
+<!--       <img src="images/carroussel.png" alt="Mon image 1" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 2" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 3" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 4" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 5" height="250px" width="400px"/> -->
