--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.6/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.6/assets/owl.theme.default.min.css" />
   </head>
   <body>
 
@@ -555,17 +557,14 @@ padding: 10px;
       <h2>RETROUVEZ LES MARQUES SUR LEURS STANDS</h2>
       <br>
       <div class="liste-marques">
-      <ul>
-        <li><div class="number">1 </div>Honda</li>
-        <li><div class="number">2 </div>Alpine</li>
-        <li><div class="number">3 </div>Audi</li>
-        <li><div class="number">4 </div>Citroen</li>
-        <li><div class="number">5 </div>Maserati</li>
-        <li><div class="number">6 </div>Mercedes Benz</li>
-        <li><div class="number">7 </div>Opel</li>
-        <li><div class="number">8 </div>Peugeot</li>
-        <li><div class="number">9</div>Volkswagen</li>
-      </ul>
+    <div class="owl-carousel">
+      <img src="images/carroussel.png" alt="Mon image 1" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 2" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 3" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 4" height="250px" width="400px"/>
+      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 5" height="250px" width="400px"/>
+    </div>
+    <br><br>
       </div>
     </div>
     <div class="boutton-partenaires-2 ">
@@ -606,6 +605,7 @@ padding: 10px;
 
   .liste-marques {
     text-align: left;
+    margin-bottom: 20px:
   }
 
   .liste-marques ul {
@@ -712,6 +712,18 @@ padding: 10px;
 </a>
 </div>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.6/owl.carousel.min.js"></script>
+
+    <script>
+    $(document).ready(function(){
+      $('.owl-carousel').owlCarousel({
+        autoplay:true,
+        loop:true
+      })
+    });
+    </script>
 
 <div class="row">
 <div class="footer">
