--- a/carrouselle.html
+++ b/carrouselle.html
@@ -9,11 +9,10 @@
   </head>
   <body>
     <div class="owl-carousel">
-      <img src="images/carroussel.png" alt="Mon image 1" />
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 2" />
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 3" />
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 4" />
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 5" />
+      <img src="images/carroussel.png" alt="Mon image 1" height="250px" width="400px"/>
+      <img src="images/carroussel2.png" alt="Mon image 1" alt="Mon image 2" height="250px" width="400px"/>
+      <img src="images/carroussel3.png" alt="Mon image 1" alt="Mon image 3" height="250px" width="400px"/>
+      <img src="images/carroussel4.png" alt="Mon image 1" alt="Mon image 4" height="250px" width="400px"/>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
