--- a/index.html
+++ b/index.html
@@ -559,16 +559,15 @@ padding: 10px;
       <div class="liste-marques">
     <div class="owl-carousel">
       <img src="images/carroussel.png" alt="Mon image 1" height="250px" width="400px"/>
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 2" height="250px" width="400px"/>
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 3" height="250px" width="400px"/>
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 4" height="250px" width="400px"/>
-      <img src="images/carroussel.png" alt="Mon image 1" alt="Mon image 5" height="250px" width="400px"/>
+      <img src="images/carroussel2.png" alt="Mon image 1" alt="Mon image 2" height="250px" width="400px"/>
+      <img src="images/carroussel3.png" alt="Mon image 1" alt="Mon image 3" height="250px" width="400px"/>
+      <img src="images/carroussel4.png" alt="Mon image 1" alt="Mon image 4" height="250px" width="400px"/>
     </div>
     <br><br>
       </div>
     </div>
     <div class="boutton-partenaires-2 ">
-      <a href="#">VOIR PLUS</a>
+      <a href="partenaires.html">VOIR PLUS</a>
     </div>
 
   </div>
