--- a/partenaires.html
+++ b/partenaires.html
@@ -827,11 +827,11 @@ margin-bottom: 20px;
 </div>
 </div>
 <div class="pages1">
-<a href="">Partenaires</a><br>
-<a href="">Contact</a>
+<a href="partenaires.html">Partenaires</a><br>
+<a href="contact.html">Contact</a>
 </div>
 <div class="pages1">
-<a href="">Infos Pratiques</a><br>
+<a href="programme.html">Infos Pratiques</a><br>
 <a href="">Mentions Légales</a>
 </div>
 <div class="pages2">
