--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
 
 <div class="banner-partenaires" >
 <div class="image-banner-partenaires">
-<img src="images/visuel_header_autre.png" alt="">
+<img src="images/autre.jpg" alt="">
 <div class="intro-partenaires text-center ">
 <div class="texte-intro-partenaires">
 <h3>CONTACTEZ-NOUS</h3>
@@ -425,11 +425,8 @@ padding: 10px;
   }
 </style>
 
-
-
 <div class="row">
 <div class="footer">
-
   <div class="partie1">
     <h5 class="text-center">CONTACTEZ NOUS</h5>
     <p class="text-center">contact@golfcapmalo.fr</p>
@@ -457,7 +454,6 @@ padding: 10px;
         <a href="contact.html">CONTACT</a>
       </div>
     </div>
-
 </div>
 </div>
 <style>
