--- a/programme.html
+++ b/programme.html
@@ -148,7 +148,7 @@
 
 <div class="banner-partenaires" >
 <div class="image-banner-partenaires">
-<img src="images/visuel_header_autre.png" alt="">
+<img src="images/autre.jpg" alt="">
 <div class="intro-partenaires text-center ">
 <div class="texte-intro-partenaires">
 <h3>LE PROGRAMME</h3>
@@ -493,7 +493,6 @@ padding: 10px;
     <p class="text-center">contact@golfcapmalo.fr</p>
     <p class="text-center">02 99 13 10 10</p>
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
