--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="image-banner">
-          <img src="images/Visuel_header_tablet.jpg" alt="" height="600">
+          <img src="images/home.jpg" alt="" height="600">
         </div>
         <div class="rouge-transparent-banner">
         </div>
