--- a/partenaires.html
+++ b/partenaires.html
@@ -145,7 +145,7 @@ border-top: 1px solid #E6E6E6;
 
 <div class="banner-partenaires" >
 <div class="image-banner-partenaires">
-<img src="images/visuel_header_autre.png" alt="">
+<img src="images/autre.jpg" alt="">
 <div class="intro-partenaires text-center ">
 <div class="texte-intro-partenaires">
 <h3>NOS PARTENAIRES</h3>
