--- a/contact.html
+++ b/contact.html
@@ -222,6 +222,10 @@
 
     </div>
 
+        <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter"></i></a>
+
   <div class="col-sm-6 formulaire-contact">
     <br><br>
     <div class="row">
@@ -230,17 +234,14 @@
     </div>
     <br><br><br>
     <div class="col-sm-6 text-center">
-    <div class="col-sm-3" style="color: red;">
-      <a href="#"><i class="fab fa-facebook fa-2x" style="color: red;"></i></a>
+    <div class="col-sm-4" style="color: red;">
+      <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook fa-2x" style="color: red;"></i></a>
     </div>
-    <div class="col-sm-3" style="color: red;">
-      <a href="#"><i class="fab fa-twitter fa-2x" style="color: red;"></i></a>
+    <div class="col-sm-4" style="color: red;">
+      <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter fa-2x" style="color: red;"></i></a>
     </div>
-    <div class="col-sm-3" style="color: red;">
-      <a href="#"><i class="fab fa-instagram fa-2x" style="color: red;"></i></a>
-    </div>
-    <div class="col-sm-3" style="color: red;">
-      <a href="#"><i class="fab fa-youtube fa-2x" style="color: red;"></i></a>
+    <div class="col-sm-4" style="color: red;">
+      <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram fa-2x" style="color: red;"></i></a>
     </div>
     </div>
     <div class="col-sm-6"></div>
@@ -432,11 +433,9 @@ padding: 10px;
     <p class="text-center">contact@golfcapmalo.fr</p>
     <p class="text-center">02 99 13 10 10</p>
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter"></i></a>
   </div>
   </div>
   <div class="pages1">
