--- a/partenaires.html
+++ b/partenaires.html
@@ -819,11 +819,9 @@ margin-bottom: 20px;
 <p class="text-center">contact@golfcapmalo.fr</p>
 <p class="text-center">02 99 13 10 10</p>
 <div class="footer-links">
-<a href="#"><i class="fab fa-github"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
-<a href="#"><i class="fab fa-facebook"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
-<a href="#"><i class="fab fa-linkedin"></i></a>
+  <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook"></i></a>
+  <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter"></i></a>
 </div>
 </div>
 <div class="pages1">
