--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <br>
     <p>C’est dans le but de réunir le monde de l’automobile et celui du golf que l’idée de cet AutoShow est née. La 1ère édition de cet évènement unique
 en France se tiendra donc le 24 et 25 Mai 2019.
-Au total 29 marques automobiles et plus d’une centaine de véhicules seront exposés au Gold de Cap Malo, à Melesse.
+Au total 29 marques automobiles et plus d’une centaine de véhicules seront exposés au Golf de Cap Malo, à Melesse.
 Venez découvrir ce nouveau salon automobile dans un cadre exceptionnel et hors du commun ! De nombreuses animations vous seront proposées pour découvrir le golf (initiations gratuites, démonstrations…).
 Restauration sur place et entrée gratuite, ouverte à tous.</p>
   </div>
@@ -779,7 +779,7 @@ padding: 10px;
   </div>
     <div class="pages1">
     <a href="programme.html">Infos Pratiques</a><br>
-    <a href="">Mentions Légales</a>
+    <a href="mentionslegales.html">Mentions Légales</a>
   </div>
     <div class="pages2">
       <p>Avenue du Phare du Grand Jardin</p>
