--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -444,7 +444,7 @@ padding: 10px;
   </div>
     <div class="pages1">
     <a href="programme.html">Infos Pratiques</a><br>
-    <a href="mentionslegales.html">Mentions Légales</a>
+    <a href="mentionslegales.html">mentionslegales.htmls Légales</a>
   </div>
     <div class="pages2">
       <p>Avenue du Phare du Grand Jardin</p>
