--- a/partenaires.html
+++ b/partenaires.html
@@ -830,7 +830,7 @@ margin-bottom: 20px;
 </div>
 <div class="pages1">
 <a href="programme.html">Infos Pratiques</a><br>
-<a href="">Mentions Légales</a>
+<a href="mentionslegales.html">Mentions Légales</a>
 </div>
 <div class="pages2">
 <p>Avenue du Phare du Grand Jardin</p>
