--- a/programme.html
+++ b/programme.html
@@ -504,7 +504,7 @@ padding: 10px;
   </div>
     <div class="pages1">
     <a href="programme.html">Infos Pratiques</a><br>
-    <a href="">Mentions Légales</a>
+    <a href="mentionslegales.html">Mentions Légales</a>
   </div>
     <div class="pages2">
       <p>Avenue du Phare du Grand Jardin</p>
