--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -149,7 +149,7 @@
 <img src="images/autre.jpg" alt="">
 <div class="intro-partenaires text-center ">
 <div class="texte-intro-partenaires">
-<h3>CONTACTEZ-NOUS</h3>
+<h3>MENTIONS LÉGALES</h3>
 <p>Avenue du Phare du Grand Jardin - 35520 MELESSE</p>
 </div>
 </div>
@@ -214,217 +214,7 @@
 
 </style>
 
-<div class="row">
-  <div class="col-sm-offset-1 col-sm-5 google-map-contact text-center">
-    <div class="google-map-deskop">
-    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=avenue%20du%20phare%20du%20grnd%20jardin%20melesse&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Werbung: <a href="https://www.pureblack.de">Pure Black GmbH</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-    </div>
 
-    </div>
-
-        <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter"></i></a>
-
-  <div class="col-sm-6 formulaire-contact">
-    <br><br>
-    <div class="row">
-    <div class="col-sm-12">
-    <h4 class="">Rejoignez-nous</h4>
-    </div>
-    <br><br><br>
-    <div class="col-sm-6 text-center">
-    <div class="col-sm-4" style="color: red;">
-      <a href="https://www.facebook.com/GolfCapMalo/"><i class="fab fa-facebook fa-2x" style="color: red;"></i></a>
-    </div>
-    <div class="col-sm-4" style="color: red;">
-      <a href="https://twitter.com/Golf_CapMalo"><i class="fab fa-twitter fa-2x" style="color: red;"></i></a>
-    </div>
-    <div class="col-sm-4" style="color: red;">
-      <a href="https://www.instagram.com/golfcapmalo/"><i class="fab fa-instagram fa-2x" style="color: red;"></i></a>
-    </div>
-    </div>
-    <div class="col-sm-6"></div>
-    </div>
-    <br><br>
-    <div class="row">
-      <!-- Begin Mailchimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-      </style>
-      <div id="mc_embed_signup">
-      <form action="https://wms-agency.us12.list-manage.com/subscribe/post?u=0c4b57b28a945126b4aa7228d&amp;id=b5f13c8f4f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div id="mc_embed_signup_scroll">
-      <div class="col-sm-12">
-      <h2 class="">Nous écrire</h2>
-      </div>
-      <div class="col-sm-6">
-
-        <div class="mc-field-group">
-        <label for="mce-LNAME">Nom </label>
-        <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="mc-field-group">
-        <label for="mce-FNAME">Prénom </label>
-        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-        </div>
-      </div>
-      <div class="col-sm-12">
-        <div class="mc-field-group">
-        <label for="mce-EMAIL">Mail  <span class="asterisk">*</span>
-        </label>
-        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-        </div>
-      </div>
-
-      <div id="mce-responses" class="clear">
-      <div class="response" id="mce-error-response" style="display:none"></div>
-      <div class="response" id="mce-success-response" style="display:none"></div>
-      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c4b57b28a945126b4aa7228d_b5f13c8f4f" tabindex="-1" value=""></div>
-      <div class="col-sm-12 text-center">
-      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-      </div>
-      </div>
-      </form>
-      </div>
-    </div>
-    <!--End mc_embed_signup-->
-
-  </div>
-</div>
- </div>
-
-<style>
-
-    @media (max-width: 500px) {
-
-
-      .gmap_canvas {
-      overflow: hidden;
-      background: none!important;
-      height: 500px;
-      width: 361px!important;
-      }
-      .mapouter {
-      position: relative;
-      text-align: right;
-      height: 500px;
-      width: 388px;
-      }
-    }
-</style>
-
-
-<br><br>
-<div class="partenaires text-center">
-<div class="row text-center">
-<div class="col-sm-offset-1 col-sm-2 col-xs-12">
-<div class="card-garage text-center">
-<div class="card-image-garage text-center">
-<img src="images/porsh.jpg" height="100px">
-</div>
-</div>
-
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-</div>
-<div class="col-sm-2 col-xs-12">
-<div class="card-garage">
-<div class="card-image-garage">
-<img src="images/nissan.jpg" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-
-}
-@media (max-width: 500px) {
-.card-image-garage {
-margin-bottom: 20px;
-}
-}
-</style>
-</div>
-<div class="col-sm-2 col-xs-12">
-<div class="card-garage">
-<div class="card-image-garage">
-<img src="images/mercedes.jpg" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-</div>
-<div class="col-sm-2 col-xs-12">
-<div class="card-garage">
-<div class="card-image-garage">
-<img src="images/mazerati.jpg" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-</div>
-<div class="col-sm-2 col-xs-12">
-<div class="card-garage">
-<div class="card-image-garage">
-<img src="images/opel.jpg" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-</div>
-
-</div>
-</div>
-<br><br>
-<style>
-  .margin-t-b {
-    margin-bottom: 20px;
-  }
-
-  .google-map-contact {
-  margin: auto;
-
-  }
-</style>
 
 <div class="row">
 <div class="footer">
