--- a/contact.html
+++ b/contact.html
@@ -247,54 +247,23 @@
     <div class="col-sm-6"></div>
     </div>
     <br><br>
-    <div class="row">
-      <!-- Begin Mailchimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-      </style>
-      <div id="mc_embed_signup">
-      <form action="https://wms-agency.us12.list-manage.com/subscribe/post?u=0c4b57b28a945126b4aa7228d&amp;id=b5f13c8f4f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div id="mc_embed_signup_scroll">
-      <div class="col-sm-12">
-      <h2 class="">Nous écrire</h2>
-      </div>
-      <div class="col-sm-6">
+      <div class="row text-center">
 
-        <div class="mc-field-group">
-        <label for="mce-LNAME">Nom </label>
-        <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-        </div>
+      <FORM METHOD=POST ENCTYPE="text/plain" ACTION="mailto:contact@golfcapmalo.fr">
+      <div class="col-sm-6 form-group">
+      <INPUT NAME=Nom placeholder=Nom size=30>
       </div>
-      <div class="col-sm-6">
-        <div class="mc-field-group">
-        <label for="mce-FNAME">Prénom </label>
-        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-        </div>
+      <div class="col-sm-6 form-group">
+      <INPUT NAME=Prenom placeholder=Prénom size=30>
+      </div>
+      <br><br>
+      <div class="col-sm-12 form-group">
+      <TEXTAREA NAME=Message rows=7 cols=81 placeholder=Message ></TEXTAREA>
       </div>
       <div class="col-sm-12">
-        <div class="mc-field-group">
-        <label for="mce-EMAIL">Mail  <span class="asterisk">*</span>
-        </label>
-        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-        </div>
-      </div>
-
-      <div id="mce-responses" class="clear">
-      <div class="response" id="mce-error-response" style="display:none"></div>
-      <div class="response" id="mce-success-response" style="display:none"></div>
-      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c4b57b28a945126b4aa7228d_b5f13c8f4f" tabindex="-1" value=""></div>
-      <div class="col-sm-12 text-center">
-      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-      </div>
-      </div>
-      </form>
-      </div>
+      <INPUT TYPE=SUBMIT VALUE=Envoyer>
     </div>
-    <!--End mc_embed_signup-->
+      </FORM>
 
   </div>
 </div>
