--- a/partenaires.html
+++ b/partenaires.html
@@ -291,7 +291,7 @@ box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
         <div class="card-image-garage">
-            <a href="http://www.groupelanglois.fr/" target="_blank">
+            <a href="https://fiat.groupegca.com/concessions-fiat-rennes-1" target="_blank">
               <img src="images/fiat2.jpg" height="100px">
             </a>
           </div>
